--- a/articolo.html
+++ b/articolo.html
@@ -191,7 +191,13 @@
           </form>
         </section>
       </article>
-
+      <div id="simboli">
+        <div id="primosimbolo">
+          <i class="far fa-caret-square-up"></i>
+        </div>
+        <div id="secondosimbolo"><i class="far fa-plus-square"></i></div>
+        <div id="terzosimbolo"><i class="far fa-calendar-alt"></i></div>
+      </div>
       <aside>
         <h2>Articoli correlati</h2>
         <div>
